--- a/app/src/main/res/values-ga-rIE/strings.xml
+++ b/app/src/main/res/values-ga-rIE/strings.xml
@@ -60,7 +60,7 @@
     <string name="menu_show_changelog">Taispeáin loga na n-athruithe</string>
     <string name="menu_ab_perf_mode">Tabhair tosaíocht don phróiseas nuashonraithe</string>
     <string name="menu_update_recovery">Nuashonraigh aisghabháil</string>
-    <string name="toast_forced_update_recovery">Tá sé dodhéanta nuashonruithe Lineage Recovery a dhíchumasú ar an ngléas seo.</string>
+    <string name="toast_forced_update_recovery">Tá sé dodhéanta nuashonruithe crDroid Recovery a dhíchumasú ar an ngléas seo.</string>
     <string name="snack_updates_found">Nuashonruithe nua aimsithe</string>
     <string name="snack_no_updates_found">Níor aimsíodh aon nuashonruithe nua</string>
     <string name="snack_updates_check_failed">Theip ar an tseiceáil nuashonraithe. Seiceáil do cheangal idirlín agus bain triail eile as ar ball.</string>
@@ -68,11 +68,11 @@
     <string name="snack_download_verification_failed">Theip ar fhíorú an nuashonraithe.</string>
     <string name="snack_download_verified">Íoslódáil críochnaithe.</string>
     <string name="snack_update_not_installable">Ní féidir an nuashonrú seo a shuiteáil ar bharr an leagan reatha.</string>
-    <string name="header_title_text">LineageOS\n%1$s</string>
+    <string name="header_title_text">crDroid\n%1$s</string>
     <string name="header_android_version">Android <xliff:g id="version" sampla="7.1.2">%1$s</xliff:g></string>
     <string name="header_last_updates_check">Seiceáladh seo caite: <xliff:g id="date" example="1 Eanáir 1970">%1$s</xliff:g> (<xliff:g id="time" sampla="01:23">%2$s</xliff:g>)</string>
-    <string name="list_build_version">LineageOS <xliff:g id="version" example="14.1">%1$s</xliff:g></string>
-    <string name="list_build_version_date">LineageOS <xliff:g id="version" example="14.1">%1$s</xliff:g> - <xliff:g id="date" example="July 11, 2017">%2$s</xliff:g></string>
+    <string name="list_build_version">crDroid <xliff:g id="version" example="14.1">%1$s</xliff:g></string>
+    <string name="list_build_version_date">crDroid <xliff:g id="version" example="14.1">%1$s</xliff:g> - <xliff:g id="date" example="July 11, 2017">%2$s</xliff:g></string>
     <string name="list_download_progress_newer"><xliff:g id="filesize_without_unit" example="12.2">%1$s</xliff:g> of <xliff:g id="filesize_without_unit" example="310 MB">%2$s</xliff:g></string>
     <string name="list_download_progress_eta_newer"><xliff:g id="filesize_without_unit" example="12.2">%1$s</xliff:g> of <xliff:g id="filesize_without_unit" example="310 MB">%2$s</xliff:g> (<xliff:g id="eta" example="3 minutes left">%3$s</xliff:g>)</string>
     <string name="list_verifying_update">Nuashonrú á fhíorú</string>
@@ -129,7 +129,7 @@
     <string name="ongoing_channel_title">Íoslódálacha leanúnacha</string>
     <string name="update_failed_channel_title">Theip ar an nuashonrú</string>
     <string name="info_dialog_title">An raibh a fhios agat?</string>
-    <string name="info_dialog_message">Is pacáistí suiteála iomlána iad nuashonruithe LineageOS. Ciallaíonn sé sin nach féidir leat ach an nuashonrú is déanaí a shuiteáil i gcónaí, fiú mura ndearna tú roinnt eatarthu!</string>
+    <string name="info_dialog_message">Is pacáistí suiteála iomlána iad nuashonruithe crDroid. Ciallaíonn sé sin nach féidir leat ach an nuashonrú is déanaí a shuiteáil i gcónaí, fiú mura ndearna tú roinnt eatarthu!</string>
     <string name="info_dialog_ok">Go raibh maith agat as an eolas!</string>
     <string name="local_update_import">Nuashonrú áitiúil</string>
     <string name="local_update_import_progress">Nuashonrú logánta á iompórtáil\u2026</string>
